# Vigilia

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_NOTES.md  ENVIRONMENT.md  README.md  SECURITY.md  docker-compose.loadtest.yml  docker-compose.local.yml  docker-compose.portainer.yml  docker-compose.prod.yml  docker-compose.yml  netlify.toml  nginx-vigilia.conf
src/backend/: .bandit.yml  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml  test.db
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_initial_schema.py  002_add_roles_table.py  002_priority_to_integer.py  003_add_audit_logs.py  004_add_notifications.py  005_add_buildings.py  006_add_roles_table.py  007_add_iot_devices_and_audio.py  008_add_device_status_history.py  009_add_emergency_procedure.py  010_add_evacuation_route.py  011_add_emergency_checkpoint.py  012_add_documents_photos_inspections.py  013_add_device_icon_fields.py  014_add_communication_hub.py  015_add_notification_deliveries.py  016_add_iot_foundation.py  017_add_iot_telemetry_alert_source.py
src/backend/app/: __init__.py  main.py
src/backend/app/api/: __init__.py  alarm_receiver.py  alert_rules.py  alerts.py  analytics.py  audio_clips.py  audit.py  auth.py  buildings.py  cad.py  channels.py  communications.py  dashboard.py  device_profiles.py  device_provisioning.py  device_twin.py  devices.py  emergency_planning.py  geospatial.py  gis.py  incidents.py  iot_devices.py  messages.py  mqtt_auth.py  notification_deliveries.py  notification_preferences.py  notifications.py  resources.py  roles.py  streaming.py  telemetry.py  telemetry_query.py  users.py
src/backend/app/core/: __init__.py  certificate_authority.py  config.py  deps.py  metrics.py  security.py
src/backend/app/integrations/: __init__.py  base.py
src/backend/app/models/: __init__.py  agency.py  alert.py  audio_clip.py  audit.py  base.py  building.py  channel.py  device.py  device_credentials.py  device_profile.py  device_status_history.py  device_telemetry.py  device_twin.py  document.py  emergency_checkpoint.py  emergency_procedure.py  evacuation_route.py  incident.py  (+8 more)
src/backend/scripts/: admin_utils.py  init_admin.py
src/backend/tests/: __init__.py  conftest.py  test_alert_rule_evaluation_service.py  test_alert_service.py  test_analytics.py  test_api_alert_rules.py  test_api_alerts.py  test_api_analytics.py  test_api_auth.py  test_api_buildings.py  test_api_channels.py  test_api_dashboard.py  test_api_incidents.py  test_api_iot_devices.py  test_api_messages.py  test_api_notifications.py  test_api_resources.py  test_api_roles.py  test_api_telemetry.py  test_api_users.py  test_assignment_engine.py  test_auth_service.py  test_building_analytics.py  test_building_service.py  test_channel_service.py  test_device_provisioning_service.py  test_device_service.py  test_documents_api.py  test_emergency_planning.py  test_file_storage.py  test_floor_plan_upload.py  test_health_service.py  test_incident_service.py  test_inspections_api.py  test_integrations_alarms.py  test_integrations_axis.py  test_integrations_base.py  test_integrations_cad.py  test_integrations_gis.py  test_iot_devices_api.py  (+11 more)
(+329 files in other folders)
