[project]
name = "eriop-backend"
version = "0.1.0"
description = "Emergency Response IoT Platform - Backend API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "paho-mqtt>=1.6.1",
    "structlog>=24.1.0",
    "python-socketio>=5.10.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    "ifcopenshell>=0.8.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "prometheus-client>=0.19.0",
    "sendgrid>=6.12.5",
    "twilio>=9.0.0",
    "pywebpush>=2.2.0",
    "backoff>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*", "*/venv/*", "*/alembic/*"]
branch = true

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.coverage.html]
directory = "htmlcov"
